[package]
name = "gossip"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = true}
async-trait = "0.1.88"

